# LockLessIpc

./: CMakeLists.txt  README.md  ipc.h  ipc_common.h  ipc_config.h  ipc_impl.h
cmake/: ArmLinuxToolchain.cmake  QnxToolchain.cmake  Toolchain-A72.cmake  Toolchain-R5F_7_0.cmake  Toolchain-R5F_7_1.cmake  Toolchain-V4L.cmake  Toolchain-V5L.cmake  Toolchain-x86_64.cmake
common/: atomic_64.h  buffer.cpp  buffer.h  generic.h  json.h  logger.h  noncopyable.h  protocol.h  spinlock.cpp  spinlock.h  timerfd.h  util.h
